Fix Railway Dockerfile detection
- Remove Dockerfile from .railwayignore to allow Railway to detect it
- Railway was falling back to Railpack/NIXPACKS because Dockerfile was excluded
- Allow frontend/Dockerfile and backend/Dockerfile to be included in deployments

--- a/.railwayignore
+++ b/.railwayignore
@@ -31,10 +31,10 @@ content/
 # Environment examples
 .env.example
 
-# Docker (Railway uses its own build)
+# Docker Compose files (not needed for Railway deployment)
 docker-compose.yml
 docker-compose.prod.yml
-Dockerfile
+# Note: Dockerfiles in subdirectories (frontend/Dockerfile, backend/Dockerfile) are needed and should NOT be ignored
 
 # Deployment configs
 deploy/
